# PR

Lab1/: .gitignore  CMakeLists.txt  DownloadImages.py  OpenThroughSocket.py  imagesList.c  main.c  main.py  socket.c  socketConnect.c
Lab2/: pom.xml
Lab2/src/main/java/com/company/: AppUI.java  EmailReceiver.java  EmailSender.java  Main.java  User.java
Lab3/: pom.xml
Lab3/src/main/java/com/company/: Authenticate.java  CatInfo.java  Image.java  Main.java  Requests.java  Weight.java
Lab3/src/main/java/com/company/helpers/: CatHelpers.java
Lab4/: .gitignore
Lab4/src/com/company/: Client.java  ConnectionHandler.java  Server.java
Lab5/src/com/company/: Client.java  Main.java  Server.java
